--- a/index.html
+++ b/index.html
@@ -5,6 +5,53 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="style.css">
+ <style>
+  * {
+ border: 0;
+ margin:0;
+ box-sizing: border-box;
+}
+body{
+ margin: 5px 10px;
+ background-image: url(images/backgroundimg.jpg);
+}
+header{
+ background-image: url(images/pattern\ 1.jpeg);
+ width: 100%;
+ height: 120px;
+ border: 4px solid rgb(233, 132, 149)
+}
+
+header h1 {
+ font-size: 80px;
+ font-weight: bold;
+ text-align: center;
+ color: rgb(251, 100, 125);
+ padding-top: 8px;
+}
+
+.main{
+ padding-top: 20px;
+ text-align: center;
+ padding-left: 4px;
+}
+
+.main h2{
+ font-family: Verdana, Geneva, Tahoma, sans-serif;
+ padding-top: 40px;
+}
+
+.main img,p{
+ padding:10px 2px;
+ padding-top: 40px;
+}
+
+p strong{
+ color:blueviolet;
+}
+
+
+ </style>
  <title>Dasmoto's Art & Craft</title>
 </head>
 <body>
